--- a/src/app/components/index/component.index.html
+++ b/src/app/components/index/component.index.html
@@ -1,1 +1,14 @@
+<div class="lockField" style="display: none;"></div>
 <div ngClass="content"></div>
+<history></history>
+<permission></permission>
+<contextmenu></contextmenu>
+<form></form>
+<dialog></dialog>
+<div class="flatLine" style="margin-left: 695px; margin-top: 415px; display: none;">
+    <p>Sanal HDD/kissclipart-mars-without-background-clipart-mars-science-labor-4e198c0bf420d0cb.png</p>
+    <div class="flatBlank"></div>
+</div>
+<comment></comment>
+<property></property>
+<progress></progress>
