--- a/src/app/components/contentside/component.contentside.html
+++ b/src/app/components/contentside/component.contentside.html
@@ -1,4 +1,4 @@
-<div class="contentSide" style="width: 1576.75px;">
+<div ngClass="contentSide">
     <folderpath></folderpath>
     <grid></grid>
 </div>
