--- a/src/app/components/folderpath/component.folderpath.html
+++ b/src/app/components/folderpath/component.folderpath.html
@@ -1,21 +1,21 @@
-<div class="folderPath">
-    <div class="folderLine bottomBorder">
+<div ngClass="folderPath">
+    <div ngClass="folderLine bottomBorder">
         <div name="folders">
-            <div class="folderItem" name="pathTitle" currentlocation="2" locationid="40" diskid="40">
+            <div ngClass="folderItem" name="pathTitle" currentlocation="2" locationid="40" diskid="40">
                 <span>Konum</span>
             </div>
 
 
 
 
-            <div class="searchBar">
-                <img id="searchButton" src="/img/search.png">
-                <img id="notify" src="/img/bell.png">
+            <div ngClass="searchBar">
+                <img id="searchButton" src="/assets/images/search.png">
+                <img id="notify" src="/assets/images/bell.png">
 
             </div>
-            <div name="notifications" class="notifications"></div>
-            <div class="folderItem" type="2" itemid="40"><img src="/img/hdd.png"></div>
-            <div class="folderItem" type="2" itemid="40"><span>Sanal HDD</span></div>
+            <div name="notifications" ngClass="notifications"></div>
+            <div ngClass="folderItem" type="2" itemid="40"><img src="/assets/images/hdd.png"></div>
+            <div ngClass="folderItem" type="2" itemid="40"><span>Sanal HDD</span></div>
         </div>
     </div>
 
