--- a/src/app/components/folderside/component.folderside.html
+++ b/src/app/components/folderside/component.folderside.html
@@ -1,21 +1,21 @@
-<div ngClass="folderside">
+<div ngClass="folderSide">
     <div id="diskTree" ngClass="directory tj_container">
         <ul>
-            <li><span class="tj_description"><span class="tj_mod_icon"><span>◢</span></span><span class="tj_icon"><img
-                            src="/img/hdd.png" width="15px/"></span>Diskler</span>
+            <li><span ngClass="tj_description"><span ngClass="tj_mod_icon"><span>◢</span></span><span ngClass="tj_icon"><img
+                            src="/assets/images/hdd.png" width="15px/"></span>Diskler</span>
                 <ul>
                     <li>
-                        <span onclick="openDisk(40);" class="tj_description selected tj_leaf">
-                            <span class="tj_icon">
-                                <img src="/img/hdd.png" width="15px/">
+                        <span onclick="openDisk(40);" ngClass="tj_description selected tj_leaf">
+                            <span ngClass="tj_icon">
+                                <img src="/assets/images/hdd.png" width="15px/">
                             </span>
                         <span>Sanal HDD (959,1 KB)</span>
                         </span>
                     </li>
                     <li>
-                        <span onclick="openDisk(42);" class="tj_description tj_leaf">
-                            <span class="tj_icon">
-                                <img src="/img/hdd.png" width="15px/">
+                        <span onclick="openDisk(42);" ngClass="tj_description tj_leaf">
+                            <span ngClass="tj_icon">
+                                <img src="/assets/images/hdd.png" width="15px/">
                             </span>
                         <span>SQL Disk (0 Byte)</span>
                         </span>
@@ -24,21 +24,21 @@
             </li>
         </ul>
     </div>
-    <div id="privateFieldTree" class="directory tj_container">
+    <div id="privateFieldTree" ngClass="directory tj_container">
         <ul>
             <li>
-                <span class="tj_description">
-                    <span class="tj_mod_icon">
+                <span ngClass="tj_description">
+                    <span ngClass="tj_mod_icon">
                         <span>◢</span>
                 </span>
-                <span class="tj_icon">
-                        <img src="/img/hdd.png" width="15px/">
+                <span ngClass="tj_icon">
+                        <img src="/assets/images/hdd.png" width="15px/">
                     </span>Kişisel Alanım</span>
                 <ul>
                     <li>
-                        <span onclick="openVirtualDisk(-1);" class="tj_description selected tj_leaf">
-                            <span class="tj_icon">
-                                <img src="/img/hdd.png" width="15px/">
+                        <span onclick="openVirtualDisk(-1);" ngClass="tj_description selected tj_leaf">
+                            <span ngClass="tj_icon">
+                                <img src="/assets/images/hdd.png" width="15px/">
                             </span>
                         <span>Internet Paylasimlarim (416,2 KB)</span>
                         </span>
@@ -48,4 +48,4 @@
         </ul>
     </div>
 </div>
-<div class="dragSide"></div>
+<div ngClass="dragSide"></div>
