--- a/src/app/components/progress/component.progress.html
+++ b/src/app/components/progress/component.progress.html
@@ -1,18 +1,18 @@
-<div class="dialogProgress">
-    <div class="dialogProgressTop">
-        <div class="dialogProgressTitle">
+<div ngClass="dialogProgress">
+    <div ngClass="dialogProgressTop">
+        <div ngClass="dialogProgressTitle">
             <span>Yükle</span>
         </div>
     </div>
-    <div class="dialogProgressFrame">
-        <div class="dialogProgressIcon">
-            <img src="/img/upload.png">
+    <div ngClass="dialogProgressFrame">
+        <div ngClass="dialogProgressIcon">
+            <img src="/assets/images/upload.png">
         </div>
-        <div class="dialogProgressContent">
+        <div ngClass="dialogProgressContent">
             <input type="file" id="selectFile" name="file" multiple="multiple">
-            <div class="progress">
-                <div class="progress-bar"></div>
-                <div class="progressValue">0%</div>
+            <div ngClass="progress">
+                <div ngClass="progress-bar"></div>
+                <div ngClass="progressValue">0%</div>
                 <div id="status">Yükleniyor...</div>
             </div>
         </div>
