--- a/src/app/components/properties/component.property.html
+++ b/src/app/components/properties/component.property.html
@@ -1,107 +1,107 @@
-<div class="properties">
-    <div class="propertiesTitle">
-        <div class="propertiesTitleText">
+<div ngClass="properties">
+    <div ngClass="propertiesTitle">
+        <div ngClass="propertiesTitleText">
             <span name="propertiesTitle"></span>
         </div>
-        <div class="propertiesTitleClose" onclick="propertiesWindow.hide();">
-            <img src="/img/close.png">
+        <div ngClass="propertiesTitleClose" onclick="propertiesWindow.hide();">
+            <img src="/assets/images/close.png">
         </div>
     </div>
-    <div class="propertiesContent">
-        <div class="propertiesLine bottomBorder">
-            <div class="propertiesLineLeft">
-                <img src="/img/folder.png" name="propertiesImage">
+    <div ngClass="propertiesContent">
+        <div ngClass="propertiesLine bottomBorder">
+            <div ngClass="propertiesLineLeft">
+                <img src="/assets/images/folder.png" name="propertiesImage">
             </div>
-            <div class="propertiesLineRight">
+            <div ngClass="propertiesLineRight">
                 <input type="text" name="propertiesName">
             </div>
         </div>
-        <div class="propertiesLine">
-            <div class="propertiesLineLeft">
+        <div ngClass="propertiesLine">
+            <div ngClass="propertiesLineLeft">
                 <span>Tip:</span>
             </div>
-            <div class="propertiesLineRight">
+            <div ngClass="propertiesLineRight">
                 <span name="propertiesType"></span>
             </div>
         </div>
-        <div class="propertiesLine">
-            <div class="propertiesLineLeft">
+        <div ngClass="propertiesLine">
+            <div ngClass="propertiesLineLeft">
                 <span>Konum:</span>
             </div>
-            <div class="propertiesLineRight">
+            <div ngClass="propertiesLineRight">
                 <input readonly="" name="propertiesLocation" type="text">
             </div>
         </div>
-        <div class="propertiesLine">
-            <div class="propertiesLineLeft">
+        <div ngClass="propertiesLine">
+            <div ngClass="propertiesLineLeft">
                 <span>Boyut:</span>
             </div>
-            <div class="propertiesLineRight">
+            <div ngClass="propertiesLineRight">
                 <span name="propertiesSize"></span>
             </div>
         </div>
-        <div class="propertiesLine bottomBorder">
-            <div class="propertiesLineLeft">
+        <div ngClass="propertiesLine bottomBorder">
+            <div ngClass="propertiesLineLeft">
                 <span>Içerik:</span>
             </div>
-            <div class="propertiesLineRight">
+            <div ngClass="propertiesLineRight">
                 <span name="propertiesContent"></span>
             </div>
         </div>
-        <div class="propertiesLine">
-            <div class="propertiesLineLeft">
+        <div ngClass="propertiesLine">
+            <div ngClass="propertiesLineLeft">
                 <span>Sifreli mi?:</span>
             </div>
-            <div class="propertiesLineRight">
+            <div ngClass="propertiesLineRight">
                 <span name="propertiesCrypted">Hayır</span>
             </div>
         </div>
-        <div class="propertiesLine bottomBorder">
-            <div class="propertiesLineLeft">
+        <div ngClass="propertiesLine bottomBorder">
+            <div ngClass="propertiesLineLeft">
                 <span>Erisim:</span>
             </div>
-            <div class="propertiesLineRight">
+            <div ngClass="propertiesLineRight">
                 <span name="propertiesAccess"></span>
             </div>
         </div>
-        <div class="propertiesLine">
-            <div class="propertiesLineLeft">
+        <div ngClass="propertiesLine">
+            <div ngClass="propertiesLineLeft">
                 <span>Oluşturulma Tarihi:</span>
             </div>
-            <div class="propertiesLineRight">
+            <div ngClass="propertiesLineRight">
                 <span name="propertiesCreatedAt"></span>
             </div>
         </div>
-        <div class="propertiesLine">
-            <div class="propertiesLineLeft">
+        <div ngClass="propertiesLine">
+            <div ngClass="propertiesLineLeft">
                 <span>Olusturan:</span>
             </div>
-            <div class="propertiesLineRight">
+            <div ngClass="propertiesLineRight">
                 <span name="propertiesCreator"></span>
             </div>
         </div>
-        <div class="propertiesLine">
-            <div class="propertiesLineLeft">
+        <div ngClass="propertiesLine">
+            <div ngClass="propertiesLineLeft">
                 <span>Değiştirilme Tarihi:</span>
             </div>
-            <div class="propertiesLineRight">
+            <div ngClass="propertiesLineRight">
                 <span name="propertiesEditedAt"></span>
             </div>
         </div>
-        <div class="propertiesLine bottomBorder">
-            <div class="propertiesLineLeft">
+        <div ngClass="propertiesLine bottomBorder">
+            <div ngClass="propertiesLineLeft">
                 <span>Degistiren:</span>
             </div>
-            <div class="propertiesLineRight">
+            <div ngClass="propertiesLineRight">
                 <span name="propertiesEditor"></span>
             </div>
         </div>
-        <div class="propertiesLine">
-            <div class="propertiesLineLeft">
+        <div ngClass="propertiesLine">
+            <div ngClass="propertiesLineLeft">
                 <span>&nbsp;</span>
             </div>
-            <div class="propertiesLineRight">
-                <button class="propertiesLineRightAlignedRightButton" name="propertiesOk">Tamam</button>
+            <div ngClass="propertiesLineRight">
+                <button ngClass="propertiesLineRightAlignedRightButton" name="propertiesOk">Tamam</button>
                 <button name="propertiesCancel">Iptal</button>
             </div>
         </div>
