--- a/src/app/components/contextmenu/component.contextmenu.html
+++ b/src/app/components/contextmenu/component.contextmenu.html
@@ -1,33 +1,33 @@
-<div class="contextMenu" itemid="40" itemtype="2" shareurl="http://localhost:8709/DownloadSharing?Id=8ee4037a03ce4098a709019a2a6c28da" style="display: none; margin-left: 397px; margin-top: 347px;">
-    <div class="contextMenuTitle">
+<div ngClass="contextMenu" itemid="40" itemtype="2" shareurl="http://localhost:8709/DownloadSharing?Id=8ee4037a03ce4098a709019a2a6c28da" style="display: none; margin-left: 397px; margin-top: 347px;">
+    <div ngClass="contextMenuTitle">
         <span>Disk Seçenekleri</span>
     </div>
-    <div class="contextMenuLine " onclick="refresh();">
-        <div class="contextMenuItemLogo"><img src="/img/refresh.png"></div>
-        <div class="contextMenuItemText"><span>Yenile</span></div>
+    <div ngClass="contextMenuLine " onclick="refresh();">
+        <div ngClass="contextMenuItemLogo"><img src="/assets/images/refresh.png"></div>
+        <div ngClass="contextMenuItemText"><span>Yenile</span></div>
     </div>
-    <div class="contextMenuLine " onclick="upload();">
-        <div class="contextMenuItemLogo"><img src="/img/upload.png"></div>
-        <div class="contextMenuItemText"><span>Yükle</span></div>
+    <div ngClass="contextMenuLine " onclick="upload();">
+        <div ngClass="contextMenuItemLogo"><img src="/assets/images/upload.png"></div>
+        <div ngClass="contextMenuItemText"><span>Yükle</span></div>
     </div>
-    <div class="contextMenuLine " onclick="newFolder();">
-        <div class="contextMenuItemLogo"><img src="/img/folder.png"></div>
-        <div class="contextMenuItemText"><span>Yeni Klasör</span></div>
+    <div ngClass="contextMenuLine " onclick="newFolder();">
+        <div ngClass="contextMenuItemLogo"><img src="/assets/images/folder.png"></div>
+        <div ngClass="contextMenuItemText"><span>Yeni Klasör</span></div>
     </div>
-    <div class="contextMenuLine " onclick="paste();">
-        <div class="contextMenuItemLogo"><img src="/img/filepaste.png"></div>
-        <div class="contextMenuItemText"><span>Yapistir</span></div>
+    <div ngClass="contextMenuLine " onclick="paste();">
+        <div ngClass="contextMenuItemLogo"><img src="/assets/images/filepaste.png"></div>
+        <div ngClass="contextMenuItemText"><span>Yapistir</span></div>
     </div>
-    <div class="contextMenuLine " onclick="permissions();">
-        <div class="contextMenuItemLogo"><img src="/img/group.png"></div>
-        <div class="contextMenuItemText"><span>Yetkiler</span></div>
+    <div ngClass="contextMenuLine " onclick="permissions();">
+        <div ngClass="contextMenuItemLogo"><img src="/assets/images/group.png"></div>
+        <div ngClass="contextMenuItemText"><span>Yetkiler</span></div>
     </div>
-    <div class="contextMenuLine splitterBottom" onclick="sendItems();">
-        <div class="contextMenuItemLogo"><img src="/img/sendmail.png"></div>
-        <div class="contextMenuItemText"><span>E-Posta Olarak Gönder</span></div>
+    <div ngClass="contextMenuLine splitterBottom" onclick="sendItems();">
+        <div ngClass="contextMenuItemLogo"><img src="/assets/images/sendmail.png"></div>
+        <div ngClass="contextMenuItemText"><span>E-Posta Olarak Gönder</span></div>
     </div>
-    <div class="contextMenuLine splitterBottom" onclick="share();">
-        <div class="contextMenuItemLogo"><img src="/img/share.png"></div>
-        <div class="contextMenuItemText"><span>Paylas</span></div>
+    <div ngClass="contextMenuLine splitterBottom" onclick="share();">
+        <div ngClass="contextMenuItemLogo"><img src="/assets/images/share.png"></div>
+        <div ngClass="contextMenuItemText"><span>Paylas</span></div>
     </div>
 </div>
