--- a/src/app/components/dialog/component.dialog.html
+++ b/src/app/components/dialog/component.dialog.html
@@ -1,149 +1,149 @@
-<div class="dialog" name="inputDialog">
-    <div class="dialogTop">
-        <div class="dialogTitle">
+<div ngClass="dialog" name="inputDialog">
+    <div ngClass="dialogTop">
+        <div ngClass="dialogTitle">
             <span name="dialogTitle">Paylas</span>
         </div>
-        <div class="dialogClose" onclick="hideInputDialog();">
-            <img src="/img/close.png">
+        <div ngClass="dialogClose" onclick="hideInputDialog();">
+            <img src="/assets/images/close.png">
         </div>
     </div>
-    <div class="dialogFrame">
-        <div class="dialogIcon">
-            <img src="/img/warning.ico">
+    <div ngClass="dialogFrame">
+        <div ngClass="dialogIcon">
+            <img src="/assets/images/warning.ico">
         </div>
-        <div class="dialogContent">
+        <div ngClass="dialogContent">
             <div>
-                <p class="dialogText">Asagidaki baglantiyi kullanarak ögeleri sistem kullanicilari disinda internete açik halde paylasabilirsiniz.</p>
+                <p ngClass="dialogText">Asagidaki baglantiyi kullanarak ögeleri sistem kullanicilari disinda internete açik halde paylasabilirsiniz.</p>
             </div>
-            <div class="dialogInput" name="dialogInput">
+            <div ngClass="dialogInput" name="dialogInput">
                 <input type="text" placeholder="Isim Giriniz..">
             </div>
-            <div class="dialogControls" name="controls">
-                <div class="dialogSingleControl">
+            <div ngClass="dialogControls" name="controls">
+                <div ngClass="dialogSingleControl">
                     <button name="dialogOk">Kapat</button>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<div class="dialog" name="diskDialog">
-    <div class="dialogTop">
-        <div class="dialogTitle">
+<div ngClass="dialog" name="diskDialog">
+    <div ngClass="dialogTop">
+        <div ngClass="dialogTitle">
             <span name="dialogTitle">Paylas</span>
         </div>
-        <div class="dialogClose" onclick="hideDiskDialog();">
-            <img src="/img/close.png">
+        <div ngClass="dialogClose" onclick="hideDiskDialog();">
+            <img src="/assets/images/close.png">
         </div>
     </div>
-    <div class="dialogFrame">
-        <div class="dialogIcon">
-            <img src="/img/warning.ico">
+    <div ngClass="dialogFrame">
+        <div ngClass="dialogIcon">
+            <img src="/assets/images/warning.ico">
         </div>
-        <div class="dialogContent">
+        <div ngClass="dialogContent">
             <div>
-                <p class="dialogText">Asagidaki baglantiyi kullanarak ögeleri sistem kullanicilari disinda internete açik halde paylasabilirsiniz.</p>
+                <p ngClass="dialogText">Asagidaki baglantiyi kullanarak ögeleri sistem kullanicilari disinda internete açik halde paylasabilirsiniz.</p>
             </div>
-            <div class="dialogInput" name="diskDialogInput1">
+            <div ngClass="dialogInput" name="diskDialogInput1">
                 <input type="text" placeholder="" autocomplete="off">
             </div>
-            <div class="dialogInput" name="diskDialogInput2">
+            <div ngClass="dialogInput" name="diskDialogInput2">
                 <input type="text" placeholder="" autocomplete="off">
             </div>
-            <div class="dialogInput">
+            <div ngClass="dialogInput">
                 <select name="diskDialogStoreType"></select>
             </div>
-            <div class="dialogControls" name="controls">
-                <div class="dialogSingleControl">
+            <div ngClass="dialogControls" name="controls">
+                <div ngClass="dialogSingleControl">
                     <button name="dialogOk">Kapat</button>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<div class="dialog" name="passwordDialog">
-    <div class="dialogTop">
-        <div class="dialogTitle">
+<div ngClass="dialog" name="passwordDialog">
+    <div ngClass="dialogTop">
+        <div ngClass="dialogTitle">
             <span name="dialogTitle">Paylas</span>
         </div>
-        <div class="dialogClose" onclick="hidePasswordDialog();">
-            <img src="/img/close.png">
+        <div ngClass="dialogClose" onclick="hidePasswordDialog();">
+            <img src="/assets/images/close.png">
         </div>
     </div>
-    <div class="dialogFrame">
-        <div class="dialogIcon">
-            <img src="/img/warning.ico">
+    <div ngClass="dialogFrame">
+        <div ngClass="dialogIcon">
+            <img src="/assets/images/warning.ico">
         </div>
-        <div class="dialogContent">
+        <div ngClass="dialogContent">
             <div>
-                <p class="dialogText">Asagidaki baglantiyi kullanarak ögeleri sistem kullanicilari disinda internete açik halde paylasabilirsiniz.</p>
+                <p ngClass="dialogText">Asagidaki baglantiyi kullanarak ögeleri sistem kullanicilari disinda internete açik halde paylasabilirsiniz.</p>
             </div>
-            <div class="dialogInput" name="dialogPassword">
+            <div ngClass="dialogInput" name="dialogPassword">
                 <input type="password" placeholder="Parolayi girin..">
             </div>
-            <div class="dialogControls" name="controls">
-                <div class="dialogSingleControl">
+            <div ngClass="dialogControls" name="controls">
+                <div ngClass="dialogSingleControl">
                     <button name="dialogOk">Kapat</button>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<div class="dialog" name="passwordConfirmDialog">
-    <div class="dialogTop">
-        <div class="dialogTitle">
+<div ngClass="dialog" name="passwordConfirmDialog">
+    <div ngClass="dialogTop">
+        <div ngClass="dialogTitle">
             <span name="dialogTitle">Paylas</span>
         </div>
-        <div class="dialogClose" onclick="hidePasswordConfirmDialog();">
-            <img src="/img/close.png">
+        <div ngClass="dialogClose" onclick="hidePasswordConfirmDialog();">
+            <img src="/assets/images/close.png">
         </div>
     </div>
-    <div class="dialogFrame">
-        <div class="dialogIcon">
-            <img src="/img/warning.ico">
+    <div ngClass="dialogFrame">
+        <div ngClass="dialogIcon">
+            <img src="/assets/images/warning.ico">
         </div>
-        <div class="dialogContent">
+        <div ngClass="dialogContent">
             <div>
-                <p class="dialogText">Asagidaki baglantiyi kullanarak ögeleri sistem kullanicilari disinda internete açik halde paylasabilirsiniz.</p>
+                <p ngClass="dialogText">Asagidaki baglantiyi kullanarak ögeleri sistem kullanicilari disinda internete açik halde paylasabilirsiniz.</p>
             </div>
-            <div class="dialogInputGroup" name="dialogPasswordGroup">
-                <div class="dialogInput">
+            <div ngClass="dialogInputGroup" name="dialogPasswordGroup">
+                <div ngClass="dialogInput">
                     <input type="password" name="dialogPasswordGroupFirst" placeholder="Bir parola girin..">
                 </div>
-                <div class="dialogInput">
+                <div ngClass="dialogInput">
                     <input type="password" name="dialogPasswordGroupSecond" placeholder="Parolayi tekrar girin..">
                 </div>
             </div>
-            <div class="dialogControls" name="controls">
-                <div class="dialogSingleControl">
+            <div ngClass="dialogControls" name="controls">
+                <div ngClass="dialogSingleControl">
                     <button name="dialogOk">Kapat</button>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<div class="dialog" name="yesNoDialog" style="display: none;">
-    <div class="dialogTop">
-        <div class="dialogTitle">
+<div ngClass="dialog" name="yesNoDialog" style="display: none;">
+    <div ngClass="dialogTop">
+        <div ngClass="dialogTitle">
             <span name="dialogTitle">Paylas</span>
         </div>
-        <div class="dialogClose" onclick="hideYesNoDialog();">
-            <img src="/img/close.png">
+        <div ngClass="dialogClose" onclick="hideYesNoDialog();">
+            <img src="/assets/images/close.png">
         </div>
     </div>
-    <div class="dialogFrame">
-        <div class="dialogIcon">
-            <img src="/img/warning.ico">
+    <div ngClass="dialogFrame">
+        <div ngClass="dialogIcon">
+            <img src="/assets/images/warning.ico">
         </div>
-        <div class="dialogContent">
+        <div ngClass="dialogContent">
             <div>
-                <p class="dialogText">Asagidaki baglantiyi kullanarak ögeleri sistem kullanicilari disinda internete açik halde paylasabilirsiniz.</p>
+                <p ngClass="dialogText">Asagidaki baglantiyi kullanarak ögeleri sistem kullanicilari disinda internete açik halde paylasabilirsiniz.</p>
             </div>
-            <div class="dialogControls" name="controls">
-                <div class="dialogYesNo">
-                    <div class="dialogYes">
+            <div ngClass="dialogControls" name="controls">
+                <div ngClass="dialogYesNo">
+                    <div ngClass="dialogYes">
                         <button name="dialogYes">Evet</button>
                     </div>
-                    <div class="dialogNo">
+                    <div ngClass="dialogNo">
                         <button name="dialogNo">Hayir</button>
                     </div>
                 </div>
@@ -151,74 +151,74 @@
         </div>
     </div>
 </div>
-<div class="dialog" name="infoDialog">
-    <div class="dialogTop">
-        <div class="dialogTitle">
+<div ngClass="dialog" name="infoDialog">
+    <div ngClass="dialogTop">
+        <div ngClass="dialogTitle">
             <span name="dialogTitle">Paylas</span>
         </div>
-        <div class="dialogClose" onclick="hideInfoDialog();">
-            <img src="/img/close.png">
+        <div ngClass="dialogClose" onclick="hideInfoDialog();">
+            <img src="/assets/images/close.png">
         </div>
     </div>
-    <div class="dialogFrame">
-        <div class="dialogIcon">
-            <img src="/img/warning.ico">
+    <div ngClass="dialogFrame">
+        <div ngClass="dialogIcon">
+            <img src="/assets/images/warning.ico">
         </div>
-        <div class="dialogContent">
+        <div ngClass="dialogContent">
             <div>
-                <p class="dialogText">Asagidaki baglantiyi kullanarak ögeleri sistem kullanicilari disinda internete açik halde paylasabilirsiniz.</p>
+                <p ngClass="dialogText">Asagidaki baglantiyi kullanarak ögeleri sistem kullanicilari disinda internete açik halde paylasabilirsiniz.</p>
             </div>
-            <div class="dialogControls" name="controls">
-                <div class="dialogSingleControl">
+            <div ngClass="dialogControls" name="controls">
+                <div ngClass="dialogSingleControl">
                     <button name="dialogOk">Kapat</button>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<div class="dialog" name="readOnlyInputDialog" style="display: none;">
-    <div class="dialogTop">
-        <div class="dialogTitle">
+<div ngClass="dialog" name="readOnlyInputDialog" style="display: none;">
+    <div ngClass="dialogTop">
+        <div ngClass="dialogTitle">
             <span name="dialogTitle">Paylas</span>
         </div>
-        <div class="dialogClose" onclick="hideReadOnlyInputDialog();">
-            <img src="/img/close.png">
+        <div ngClass="dialogClose" onclick="hideReadOnlyInputDialog();">
+            <img src="/assets/images/close.png">
         </div>
     </div>
-    <div class="dialogFrame">
-        <div class="dialogIcon">
-            <img src="/img/warning.ico">
+    <div ngClass="dialogFrame">
+        <div ngClass="dialogIcon">
+            <img src="/assets/images/warning.ico">
         </div>
-        <div class="dialogContent">
+        <div ngClass="dialogContent">
             <div>
-                <p class="dialogText">Asagidaki baglantiyi kullanarak ögeleri sistem kullanicilari disinda internete açik halde paylasabilirsiniz.</p>
+                <p ngClass="dialogText">Asagidaki baglantiyi kullanarak ögeleri sistem kullanicilari disinda internete açik halde paylasabilirsiniz.</p>
             </div>
-            <div class="dialogInput" name="dialogInput">
+            <div ngClass="dialogInput" name="dialogInput">
                 <textarea allowcontextmenu="true" readonly="readonly" cols="45" rows="5">http://localhost:8709/DownloadSharing?Id=8ee4037a03ce4098a709019a2a6c28da</textarea>
             </div>
-            <div class="dialogControls" name="controls">
-                <div class="dialogSingleControl">
+            <div ngClass="dialogControls" name="controls">
+                <div ngClass="dialogSingleControl">
                     <button name="dialogOk">Kapat</button>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<div class="dialogFixRight" name="searchDialog" style="display: none;">
-    <div class="dialogFrame">
+<div ngClass="dialogFixRight" name="searchDialog" style="display: none;">
+    <div ngClass="dialogFrame">
 
-        <div class="dialogFullContent">
+        <div ngClass="dialogFullContent">
             <div>
-                <p class="dialogText">Asagidaki baglantiyi kullanarak ögeleri sistem kullanicilari disinda internete açik halde paylasabilirsiniz.</p>
+                <p ngClass="dialogText">Asagidaki baglantiyi kullanarak ögeleri sistem kullanicilari disinda internete açik halde paylasabilirsiniz.</p>
             </div>
-            <div class="dialogInputFull" name="dialogInput">
+            <div ngClass="dialogInputFull" name="dialogInput">
                 <input name="searchText" placeholder="Aranacak Sözcük">
             </div>
-            <div class="dialogInputLeftAligned">
+            <div ngClass="dialogInputLeftAligned">
                 <input type="checkbox" value="false" name="searchAlsoFolderName"><label>Klasör isimlerinde de ara</label>
             </div>
-            <div class="dialogControls" name="controls">
-                <div class="dialogSingleControl">
+            <div ngClass="dialogControls" name="controls">
+                <div ngClass="dialogSingleControl">
                     <button name="dialogOk">Kapat</button>
                 </div>
             </div>
