--- a/src/app/components/form/component.form.html
+++ b/src/app/components/form/component.form.html
@@ -1,34 +1,34 @@
-<div class="form" name="sendMailForm">
-    <div class="formTitle">
-        <div class="formTitleText">
+<div ngClass="form" name="sendMailForm">
+    <div ngClass="formTitle">
+        <div ngClass="formTitleText">
             <span name="formTitle">Başlık</span>
         </div>
-        <div class="formTitleClose">
-            <img src="/img/close.png" onclick="form.hide();">
+        <div ngClass="formTitleClose">
+            <img src="/assets/images/close.png" onclick="form.hide();">
         </div>
     </div>
-    <div class="formContent">
-        <div class="formLine">
-            <div class="formLineLeft">
+    <div ngClass="formContent">
+        <div ngClass="formLine">
+            <div ngClass="formLineLeft">
                 <span>Alıcı:</span>
             </div>
-            <div class="formLineRight">
+            <div ngClass="formLineRight">
                 <input type="text" name="formSendMailReceiver">
             </div>
         </div>
-        <div class="formLine">
-            <div class="formLineLeft">
+        <div ngClass="formLine">
+            <div ngClass="formLineLeft">
                 <span>Açıklama:</span>
             </div>
-            <div class="formLineRight">
+            <div ngClass="formLineRight">
                 <textarea name="formSendMailComment" rows="5" cols="40"></textarea>
             </div>
         </div>
-        <div class="formLine">
-            <div class="formLineLeft">
+        <div ngClass="formLine">
+            <div ngClass="formLineLeft">
                 <span>Dosyalar:</span>
             </div>
-            <div class="formLineRight formScollable" name="formFiles">
+            <div ngClass="formLineRight formScollable" name="formFiles">
                 <p>
                     Klasör/Deneme Dosya.txt
                     <br> Klasör/Alt Klasör/Deneme Dosyası.img
@@ -39,20 +39,20 @@
                 </p>
             </div>
         </div>
-        <div class="formLine">
-            <div class="formLineLeft">
+        <div ngClass="formLine">
+            <div ngClass="formLineLeft">
                 <span>Boyut:</span>
             </div>
-            <div class="formLineRight">
+            <div ngClass="formLineRight">
                 <span name="fileSizes">12.345 MB (Kilitli, gizli ve erişime kapalılar hariç)</span>
             </div>
         </div>
-        <div class="formLine">
-            <div class="formLineLeft">
+        <div ngClass="formLine">
+            <div ngClass="formLineLeft">
                 <span>&nbsp;</span>
             </div>
-            <div class="formLineRight">
-                <button class="formAlignCenter" name="formButton" onclick="form.hide();">Gönder</button>
+            <div ngClass="formLineRight">
+                <button ngClass="formAlignCenter" name="formButton" onclick="form.hide();">Gönder</button>
             </div>
         </div>
     </div>
