--- a/src/app/components/history/component.history.html
+++ b/src/app/components/history/component.history.html
@@ -1,49 +1,49 @@
-<div class="history">
-    <div class="historyTitle">
-        <div class="historyTitleText">
+<div ngClass="history">
+    <div ngClass="historyTitle">
+        <div ngClass="historyTitleText">
             <span name="historyTitle">
                 Klasör Geçmişi
             </span>
         </div>
-        <div class="historyTitleClose" onclick="historyWindow.hide();">
-            <img src="/img/close.png">
+        <div ngClass="historyTitleClose" onclick="historyWindow.hide();">
+            <img src="/assets/images/close.png">
         </div>
     </div>
-    <div class="historyContent">
-        <div class="historyLine">
-            <div class="historyLineLogo">
-                <img src="/img/folder.png">
+    <div ngClass="historyContent">
+        <div ngClass="historyLine">
+            <div ngClass="historyLineLogo">
+                <img src="/assets/images/folder.png">
             </div>
-            <div class="historyLineText bottomBorder">
+            <div ngClass="historyLineText bottomBorder">
                 <span>01.01.2010 23:44</span>
                 <span>|</span>
                 <span>Klasör Oluşturuldu</span>
             </div>
-            <div class="historyLineFunctions">
+            <div ngClass="historyLineFunctions">
             </div>
         </div>
-        <div class="historyLine">
-            <div class="historyLineLogo">
-                <img src="/img/file.png">
+        <div ngClass="historyLine">
+            <div ngClass="historyLineLogo">
+                <img src="/assets/images/file.png">
             </div>
-            <div class="historyLineText bottomBorder">
+            <div ngClass="historyLineText bottomBorder">
                 <span>01.01.2010 23:44</span>
                 <span>|</span>
                 <span>Dosya Oluşturuldu</span>
             </div>
-            <div class="historyLineFunctions">
+            <div ngClass="historyLineFunctions">
             </div>
         </div>
-        <div class="historyLine">
-            <div class="historyLineLogo">
-                <img src="/img/file.png">
+        <div ngClass="historyLine">
+            <div ngClass="historyLineLogo">
+                <img src="/assets/images/file.png">
             </div>
-            <div class="historyLineText bottomBorder">
+            <div ngClass="historyLineText bottomBorder">
                 <span>01.01.2010 23:44</span>
                 <span>|</span>
                 <span>Dosya Silindi</span>
             </div>
-            <div class="historyLineFunctions">
+            <div ngClass="historyLineFunctions">
             </div>
         </div>
     </div>
