--- a/src/app/components/index/component.index.css
+++ b/src/app/components/index/component.index.css
@@ -3,3 +3,40 @@
     height: 100%;
     width: 100%;
 }
+
+.lockField {
+    float: none;
+    width: 100%;
+    height: 100%;
+    background-color: darkslategray;
+    opacity: 0.4;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 2;
+    display: none;
+}
+
+.flatLine {
+    float: none;
+    /*width: 200px;*/
+    height: 20px;
+    background-color: dimgray;
+    border: 1px solid gray;
+    position: absolute;
+    color: white;
+    font-size: 12px;
+    line-height: 20px;
+    left: 0;
+    top: 0;
+    display: none;
+}
+
+.flatLine p {
+    margin: 0;
+    margin-left: 10px;
+}
+
+.flatBlank {
+    width: 10px;
+}
