--- a/src/app/components/folderside/component.folderside.css
+++ b/src/app/components/folderside/component.folderside.css
@@ -19,6 +19,11 @@
                                   supported by Chrome and Opera */
 }
 
+::-webkit-scrollbar {
+    width: 3px;
+    height: 10px;
+}
+
 .tj_container * {
     position: relative;
     box-sizing: border-box;
